--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TaskActivity"/>
+        <activity android:name=".AlarmActivity" android:theme="@style/Theme.AppCompat.Translucent"/>
         <service android:name=".ReminderService"/>
     </application>
 
