--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.adamwberck.android.makeareminder">
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +19,11 @@
         <activity android:name=".TaskActivity"/>
         <activity android:name=".AlarmActivity" android:theme="@style/Theme.AppCompat.Translucent"/>
         <service android:name=".ReminderService"/>
+        <receiver android:name=".StartupReceiver">
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
