--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.adamwberck.android.makeareminder">
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
+        android:name=".MakeAReminderApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,8 +20,9 @@
         <activity android:name=".TaskActivity"/>
         <activity android:name=".AlarmActivity" android:theme="@style/Theme.AppCompat.Translucent"/>
         <service android:name=".ReminderService"/>
+        <service android:name=".StartDayService"/>
         <receiver android:name=".StartupReceiver">
-        <intent-filter>
+            <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
         </intent-filter>
         </receiver>
