--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OverviewActivity">
+        <activity android:name=".Activity.OverviewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TaskListActivity"/>
-        <activity android:name=".TaskActivity"/>
-        <activity android:name=".AlarmActivity" android:theme="@style/Theme.AppCompat.Translucent"/>
-        <service android:name=".ReminderService"/>
-        <service android:name=".StartDayService"/>
-        <receiver android:name=".StartupReceiver">
+        <activity android:name=".Activity.TaskListActivity"/>
+        <activity android:name=".Activity.TaskActivity"/>
+        <activity android:name=".Activity.AlarmActivity" android:theme="@style/Theme.AppCompat.Translucent"/>
+        <service android:name=".Service.ReminderService"/>
+        <service android:name=".Service.StartDayService"/>
+        <receiver android:name=".Service.StartupReceiver">
             <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
         </intent-filter>
