--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'net.danlew:android.joda:2.9.9.4'
     implementation 'com.google.android:flexbox:1.0.0'
+    implementation 'com.github.skydoves:colorpickerpreference:1.0.2'
 }
